--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,16 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-      <netty-version>4.0.23.Final</netty-version>
-      <spring-framework.version>3.2.5.RELEASE</spring-framework.version>
-      <org.springframework-version>3.2.5.RELEASE</org.springframework-version>
+    <netty-version>4.0.23.Final</netty-version>
+    <!--<spring-framework.version>3.2.8.RELEASE</spring-framework.version>-->
+      <spring-framework.version>4.3.13.RELEASE</spring-framework.version>
       <org.aspectj-version>1.6.10</org.aspectj-version>
-      <org.slf4j-version>1.6.6</org.slf4j-version>
-      <jackson.version>2.5.1</jackson.version>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <org.slf4j-version>1.6.6</org.slf4j-version>
+    <jackson.version>2.5.1</jackson.version>
+
   </properties>
 
   <dependencies>
@@ -33,12 +33,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-
       <!-- Netty -->
       <dependency>
           <groupId>io.netty</groupId>
@@ -56,6 +50,16 @@
           <version>${netty-version}</version>
       </dependency>
       <!-- Spring and Transactions -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+          <version>${spring-framework.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+          <version>${spring-framework.version}</version>
+      </dependency>
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context</artifactId>
@@ -81,6 +85,7 @@
           <artifactId>spring-aop</artifactId>
           <version>${spring-framework.version}</version>
       </dependency>
+      <!--redis-->
       <dependency>
           <groupId>redis.clients</groupId>
           <artifactId>jedis</artifactId>
@@ -100,6 +105,13 @@
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpmime</artifactId>
           <version>4.3.5</version>
+      </dependency>
+
+      <!--rabbitMQ-->
+      <dependency>
+          <groupId>org.springframework.amqp</groupId>
+          <artifactId>spring-rabbit</artifactId>
+          <version>1.3.5.RELEASE</version>
       </dependency>
 
       <dependency>
